--- a/sortTable/style.css
+++ b/sortTable/style.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 #target-list li {
-  border: 1px solid #000;
+  border: 5px solid red;
   margin: 2px;
   padding: 5px;
   font-size: 1.4em;
