--- a/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/020_ホバーで影ができるボタン/start/style.scss
+++ b/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/020_ホバーで影ができるボタン/start/style.scss
@@ -15,8 +15,14 @@ $cBlack: black;
   cursor: pointer;
   transition: all 0.3s;
 
-  &:hover {
-    background-color: $cBlack;
-    color: $cWhite;
+  &.float {
+    &:hover {
+      box-shadow: 0 0 10px $cBlack;
+    }
   }
+
+  // &:hover {
+  //   background-color: $cBlack;
+  //   color: $cWhite;
+  // }
 }
