--- a/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/030_演習_色んなボタンを作ってみよう/try.scss
+++ b/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/030_演習_色んなボタンを作ってみよう/try.scss
@@ -16,5 +16,44 @@ $cBlack: black;
     text-decoration: none !important;
 
     /* ここにボタンのスタイルを追加していこう */
+
+    &.float:hover {
+      background-color: $cBlack;
+      color: $cWhite;
+      box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.5);
+    }
+
+    &.filled {
+      background-color: $cBlack;
+      color: $cWhite;
+      box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.5);
+
+      &:hover {
+        background-color: $cWhite;
+        color: $cBlack;
+        box-shadow: none;
+      }
+    }
+
+    &.letter-spacing:hover {
+      background-color: $cBlack;
+      letter-spacing: 3px;
+      color: $cWhite;
+    }
+
+    &.shadow:hover {
+      transform: translate(-2.5px, -2.5px);
+      box-shadow: 5px 5px 0 0 black;
+    }
+
+    &.solid {
+      box-shadow: 2px 2px 0 0 black;
+      border-radius: 7px;
+
+      &:hover {
+        transform: translate(2px, 2px);
+        box-shadow: none;
+      }
+    }
   }
 }
