--- a/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/040_transformについて学ぼう/start/style.scss
+++ b/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/040_transformについて学ぼう/start/style.scss
@@ -2,5 +2,9 @@
   width: 100px;
   height: 100px;
   margin: 0 auto;
+  margin-top: 50px;
   background-color: orangered;
+  transform: rotate(45deg);
+  transform-origin: cefnter center;
+  transform: scale(1.1, 1.5);
 }
