--- a/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/100_要素を思った配置する方法/start/style.scss
+++ b/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/100_要素を思った配置する方法/start/style.scss
@@ -22,7 +22,8 @@
  */
 /* インライン要素に対して */
 // .parent {
-//   text-align: left;
+//   text-align: right;
+//   letter-spacing: -6px;
 // }
 // .child {
 //     display: inline-block;
