--- a/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/080_発展_3Dアニメーション/start/style.scss
+++ b/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/080_発展_3Dアニメーション/start/style.scss
@@ -15,13 +15,21 @@ $cBlack: black;
   cursor: pointer;
   transition: all 0.3s;
 
-  &.slide-bg {
+  &.cover-3d {
     position: relative;
     overflow: hidden;
     z-index: 1;
+    // 3Dアニメーションに必要なcss2つ
+    transform-style: preserve-3d;
+    perspective: 300px;
+
+    & span {
+      display: inline-block;
+      transform: translateZ(20px);
+    }
 
     &::before {
-      content: '';
+      content: "";
       display: inline-block;
       width: 100%;
       height: 100%;
@@ -29,9 +37,11 @@ $cBlack: black;
       position: absolute;
       top: 0;
       left: 0;
-      transform: translateX(-100%);
-      transition: transform 0.3s;
-      z-index: -1;
+      transform: rotateX(90deg);
+      transition: all 0.3s;
+      transform-origin: top center;
+      // z-index: -1;
+      opacity: 0;
     }
 
     &:hover {
@@ -39,6 +49,7 @@ $cBlack: black;
 
       &::before {
         transform: none;
+        opacity: 1;
       }
     }
   }
