--- a/udemy/front-dev-tutorial-master/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/loader.css
+++ b/udemy/front-dev-tutorial-master/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/loader.css
@@ -9,6 +9,15 @@ body {
   background-color: black;
   -webkit-animation: sk-bouncedelay 1.4s;
           animation: sk-bouncedelay 1.4s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 @-webkit-keyframes sk-bouncedelay {
