--- a/udemy/front-dev-tutorial-master/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/loader.scss
+++ b/udemy/front-dev-tutorial-master/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/loader.scss
@@ -10,6 +10,11 @@ body {
   height: 100px;
   background-color: $cBlack;
   animation: sk-bouncedelay 1.4s;
+  animation-timing-function: ease;
+  animation-delay: 3s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+  animation-fill-mode: forwards;
 }
 
 @keyframes sk-bouncedelay {
