--- a/udemy/front-dev-tutorial-master/03_HTMLとCSSを極める（アニメーション編）/030_Mixinを使ってみよう/start/loader.css
+++ b/udemy/front-dev-tutorial-master/03_HTMLとCSSを極める（アニメーション編）/030_Mixinを使ってみよう/start/loader.css
@@ -9,6 +9,10 @@ body {
   background-color: black;
   -webkit-animation: sk-bouncedelay 1.4s;
           animation: sk-bouncedelay 1.4s;
+  -webkit-animation-name: sk-bouncedelay;
+          animation-name: sk-bouncedelay;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
 }
 
 .paused {
