--- a/udemy/front-dev-tutorial-master/03_HTMLとCSSを極める（アニメーション編）/030_Mixinを使ってみよう/start/loader.scss
+++ b/udemy/front-dev-tutorial-master/03_HTMLとCSSを極める（アニメーション編）/030_Mixinを使ってみよう/start/loader.scss
@@ -4,12 +4,23 @@ body {
   text-align: center;
 }
 
+@mixin animation(
+  $name,
+  $duration: 1s
+) {
+  animation-name: $name;
+  animation-duration: $duration;
+}
+
 .rect {
   display: inline-block;
   width: 100px;
   height: 100px;
   background-color: $cBlack;
   animation: sk-bouncedelay 1.4s;
+  @include animation(
+    $name: sk-bouncedelay
+  );
   // animation-timing-function: ease;
   // animation-delay: 3s;
   // animation-iteration-count: infinite;
