--- a/udemy/front-dev-tutorial-master/03_HTMLとCSSを極める（アニメーション編）/070_演習_メニューアイコンを作ってみよう/start/style.css
+++ b/udemy/front-dev-tutorial-master/03_HTMLとCSSを極める（アニメーション編）/070_演習_メニューアイコンを作ってみよう/start/style.css
@@ -1,1 +1,44 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+.mobile-menu-icon {
+  background-color: transparent;
+  border: none;
+}
+
+.mobile-menu-icon > span {
+  background-color: black;
+  width: 35px;
+  height: 2px;
+  display: block;
+  margin-bottom: 9px;
+  -webkit-transition: -webkit-transform 0.7s;
+  transition: -webkit-transform 0.7s;
+  transition: transform 0.7s;
+  transition: transform 0.7s, -webkit-transform 0.7s;
+}
+
+.mobile-menu-icon > span:last-child {
+  margin-bottom: 0;
+}
+
+.menu-open {
+  background-color: black;
+}
+
+.menu-open .mobile-menu-icon > span {
+  background-color: white;
+}
+
+.menu-open .mobile-menu-icon > span:nth-child(1) {
+  -webkit-transform: translateY(11px) rotate(135deg);
+          transform: translateY(11px) rotate(135deg);
+}
+
+.menu-open .mobile-menu-icon > span:nth-child(2) {
+  -webkit-transform: translateY(-18px) scaleX(0);
+          transform: translateY(-18px) scaleX(0);
+}
+
+.menu-open .mobile-menu-icon > span:nth-child(3) {
+  -webkit-transform: translateY(-11px) rotate(-135deg);
+          transform: translateY(-11px) rotate(-135deg);
+}
+/*# sourceMappingURL=style.css.map */
